--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="img/global/favicon.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="css/index.css"/>
     <script
       src="https://unpkg.com/htmx.org@1.9.10"
       integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
@@ -17,13 +18,19 @@
   </head>
   <body>
     <header class="header">
-      <nav
+      <section
         data-hx-trigger="load"
         data-hx-swap="outerHTML"
         data-hx-get="partials/global/global.header-nav.partial.html"
-      ></nav>
+      ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.header-hero.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
+
     <footer class="footer"></footer>
   </body>
 </html>
