--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="partials/index/index.header-hero.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.partners.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
 
