Added new-arrival block, styles for header and partners

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="partials/index/index.partners.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.new-arrivals.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
 
