--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="partials/index/index.new-arrivals.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.promo-offers.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
 
