Added shop block

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="partials/index/index.promo-fixed.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.shop.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
 
