Added guitar-of-month block html css

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="partials/index/index.shop.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.guitar-of-month.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
 
