Added contacts block

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         data-hx-swap="outerHTML"
         data-hx-get="partials/index/index.guitar-of-month.partial.html"
       ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
+        data-hx-get="partials/index/index.contacts.partial.html"
+      ></section>
     </header>
     <main class="main"></main>
 
