--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
         data-hx-get="partials/global/global.footer.partial.html"
       ></footer>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
